--- a/.gitignore
+++ b/.gitignore
@@ -575,3 +575,9 @@ MigrationBackup/
 # End of https://www.gitignore.io/api/git,rider,dotnetcore,aspnetcore,visualstudio
 appsettings.*.json
 !appsettings.Test.json
+
+# custom
+obj/
+bin/
+obj/NetworkMonitoring.csproj.nuget.*
+obj/projects.*
