--- a/NetworkMonitoring.csproj
+++ b/NetworkMonitoring.csproj
@@ -8,14 +8,17 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.10" />
+    <PackageReference Include="MySql.Data" Version="8.0.31" />
+    <PackageReference Include="MySql.Web" Version="8.0.31" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\Enum\" />
     <Folder Include="NetworkMonitoring.BL\Services\Impls\" />
     <Folder Include="NetworkMonitoring.BL\Services\Interfaces\" />
-    <Folder Include="NetworkMonitoring.Data\Services\Impls\" />
-    <Folder Include="NetworkMonitoring.Data\Services\Interfaces\" />
+    <Folder Include="Pages\Management\" />
+    <Folder Include="Pages\Configuration\" />
+    <Folder Include="Pages\Templates\" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
